--- a/config.json
+++ b/config.json
@@ -431,7 +431,7 @@
         "homepage_show_carousel": true,
         "homepage_show_carousel_arrows": true,
         "homepage_show_carousel_play_pause_button": true,
-        "homepage_stretch_carousel_images": false,
+        "homepage_stretch_carousel_images": true,
         "homepage_new_products_column_count": 4,
         "homepage_featured_products_column_count": 4,
         "homepage_top_products_column_count": 4,
@@ -466,6 +466,7 @@
         "product_list_display_mode": "grid",
         "logo-position": "center",
         "logo_size": "244x60",
+        "logo_transparent": "logo-transparent.png",
         "logo_fontSize": 28,
         "brand_size": "190x250",
         "gallery_size": "300x300",
@@ -596,7 +597,7 @@
         "navUser-dropdown-backgroundColor": "#ffffff",
         "navUser-dropdown-borderColor": "#cccccc",
         "navUser-indicator-backgroundColor": "#333333",
-        "navPages-color": "#333333",
+        "navPages-color": "#212121",
         "navPages-color-hover": "#757575",
         "navPages-subMenu-backgroundColor": "#ffffff",
         "navPages-subMenu-separatorColor": "#cccccc",
@@ -816,7 +817,8 @@
         "beforeQuickSearch-popular": true,
         "beforeQuickSearch-popular-title": "Most Popular",
         "beforeQuickSearch-popular-id": "2407,2408,2409",
-        "beforeQuickSearch-limit": "3"
+        "beforeQuickSearch-limit": "3",
+        "enable_header_layout_2": true
       }
     }
   ]
