Done Setup Button - Start Update version 6.13.0 to 6.14.0

--- a/config.json
+++ b/config.json
@@ -103,8 +103,8 @@
     "default_image_brand": "img/BrandDefault.gif",
     "default_image_product": "img/ProductDefault.gif",
     "default_image_gift_certificate": "img/GiftCertificate.png",
-    "body-font": "Google_Poppins_400",
-    "headings-font": "Google_Poppins_400",
+    "body-font": "Google_Montserrat_400",
+    "headings-font": "Google_Cardo_400",
     "fontSize-root": 16,
     "fontSize-h1": 28,
     "fontSize-h2": 25,
@@ -220,7 +220,7 @@
     "navUser-dropdown-backgroundColor": "#ffffff",
     "navUser-dropdown-borderColor": "#cccccc",
     "navUser-indicator-backgroundColor": "#333333",
-    "navPages-color": "#333333",
+    "navPages-color": "#212121",
     "navPages-color-hover": "#757575",
     "navPages-subMenu-backgroundColor": "#e5e5e5",
     "navPages-subMenu-separatorColor": "#cccccc",
@@ -247,16 +247,16 @@
     "optimizedCheckout-logo-size": "250x100",
     "optimizedCheckout-logo-position": "left",
     "optimizedCheckout-headingPrimary-color": "#333333",
-    "optimizedCheckout-headingPrimary-font": "Google_Poppins_700",
+    "optimizedCheckout-headingPrimary-font": "Google_Montserrat_700",
     "optimizedCheckout-headingSecondary-color": "#333333",
-    "optimizedCheckout-headingSecondary-font": "Google_Poppins_700",
+    "optimizedCheckout-headingSecondary-font": "Google_Cardo_700",
     "optimizedCheckout-body-backgroundColor": "#ffffff",
     "optimizedCheckout-colorFocus": "#4496f6",
     "optimizedCheckout-contentPrimary-color": "#333333",
-    "optimizedCheckout-contentPrimary-font": "Google_Poppins_500",
+    "optimizedCheckout-contentPrimary-font": "Google_Montserrat_500",
     "optimizedCheckout-contentSecondary-color": "#757575",
-    "optimizedCheckout-contentSecondary-font": "Google_Poppins_500",
-    "optimizedCheckout-buttonPrimary-font": "Google_Poppins_500",
+    "optimizedCheckout-contentSecondary-font": "Google_Montserrat_500",
+    "optimizedCheckout-buttonPrimary-font": "Google_Montserrat_500",
     "optimizedCheckout-buttonPrimary-color": "#ffffff",
     "optimizedCheckout-buttonPrimary-colorHover": "#ffffff",
     "optimizedCheckout-buttonPrimary-colorActive": "#ffffff",
@@ -273,7 +273,7 @@
     "optimizedCheckout-formChecklist-color": "#333333",
     "optimizedCheckout-formChecklist-borderColor": "#cccccc",
     "optimizedCheckout-formChecklist-backgroundColorSelected": "#f5f5f5",
-    "optimizedCheckout-buttonSecondary-font": "Google_Poppins_500",
+    "optimizedCheckout-buttonSecondary-font": "Google_Montserrat_500",
     "optimizedCheckout-buttonSecondary-color": "#333333",
     "optimizedCheckout-buttonSecondary-colorHover": "#333333",
     "optimizedCheckout-buttonSecondary-colorActive": "#000000",
@@ -284,7 +284,7 @@
     "optimizedCheckout-buttonSecondary-borderColorHover": "#999999",
     "optimizedCheckout-buttonSecondary-borderColorActive": "#757575",
     "optimizedCheckout-link-color": "#476bef",
-    "optimizedCheckout-link-font": "Google_Poppins_500",
+    "optimizedCheckout-link-font": "Google_Montserrat_500",
     "optimizedCheckout-discountBanner-backgroundColor": "#e5e5e5",
     "optimizedCheckout-discountBanner-textColor": "#333333",
     "optimizedCheckout-discountBanner-iconColor": "#333333",
@@ -465,7 +465,7 @@
         "show_product_swatch_names": true,
         "product_list_display_mode": "grid",
         "logo-position": "center",
-        "logo_size": "244x60",
+        "logo_size": "330x41",
         "logo_transparent": "logo-transparent.png",
         "logo_fontSize": 28,
         "brand_size": "190x250",
@@ -480,8 +480,9 @@
         "default_image_brand": "img/BrandDefault.gif",
         "default_image_product": "img/ProductDefault.gif",
         "default_image_gift_certificate": "img/GiftCertificate.png",
-        "body-font": "Google_Poppins_400",
-        "headings-font": "Google_Poppins_400",
+        "body-font": "Google_Montserrat_400",
+        "headings-font": "Google_Cardo_400",
+        "headings-font-2": "Google_Cardo_700",
         "fontSize-root": 16,
         "fontSize-h1": 28,
         "fontSize-h2": 25,
@@ -527,24 +528,27 @@
         "color-greyLighter": "#cccccc",
         "color-greyLightest": "#e5e5e5",
         "banner--deafault-backgroundColor": "#707070",
-        "button--default-color": "#666666",
-        "button--default-colorHover": "#333333",
-        "button--default-colorActive": "#000000",
+        "button--default-color": "#ffffff",
+        "button--default-colorHover": "#ffffff",
+        "button--default-colorActive": "#ffffff",
+        "button--default-color2": "#cba052",
+        "button--default-colorHover2": "#cba052",
+        "button--default-colorActive2": "#cba052",
         "button--default-borderColor": "#8F8F8F",
         "button--default-borderColorHover": "#474747",
         "button--default-borderColorActive": "#757575",
         "button--primary-color": "#ffffff",
-        "button--primary-colorHover": "#F47B20",
-        "button--primary-colorActive": "#F47B20",
-        "button--primary-backgroundColor": "#F47B20",
-        "button--primary-backgroundColorHover": "#F47B20",
-        "button--primary-backgroundColorActive": "#F47B20",
-        "button--secondary-color": "#444444",
-        "button--secondary-colorHover": "#ffffff",
-        "button--secondary-colorActive": "#ffffff",
-        "button--secondary-backgroundColor": "#ffffff",
-        "button--secondary-backgroundColorHover": "#F47B20",
-        "button--secondary-backgroundColorActive": "#F47B20",
+        "button--primary-colorHover": "#ffffff",
+        "button--primary-colorActive": "#ffffff",
+        "button--primary-backgroundColor": "#cba052",
+        "button--primary-backgroundColorHover": "#cba052",
+        "button--primary-backgroundColorActive": "#cba052",
+        "button--secondary-color": "#cba052",
+        "button--secondary-colorHover": "#cba052",
+        "button--secondary-colorActive": "#cba052",
+        "button--secondary-backgroundColor": "transparent",
+        "button--secondary-backgroundColorHover": "transparent",
+        "button--secondary-backgroundColorActive": "transparent",
         "button--disabled-color": "#ffffff",
         "button--disabled-backgroundColor": "#cccccc",
         "button--disabled-borderColor": "transparent",
@@ -624,16 +628,16 @@
         "optimizedCheckout-logo-size": "250x100",
         "optimizedCheckout-logo-position": "left",
         "optimizedCheckout-headingPrimary-color": "#333333",
-        "optimizedCheckout-headingPrimary-font": "Google_Poppins_700",
+        "optimizedCheckout-headingPrimary-font": "Google_Montserrat_700",
         "optimizedCheckout-headingSecondary-color": "#333333",
-        "optimizedCheckout-headingSecondary-font": "Google_Poppins_700",
+        "optimizedCheckout-headingSecondary-font": "Google_Montserrat_700",
         "optimizedCheckout-body-backgroundColor": "#ffffff",
         "optimizedCheckout-colorFocus": "#4496f6",
         "optimizedCheckout-contentPrimary-color": "#333333",
-        "optimizedCheckout-contentPrimary-font": "Google_Poppins_500",
+        "optimizedCheckout-contentPrimary-font": "Google_Montserrat_500",
         "optimizedCheckout-contentSecondary-color": "#757575",
-        "optimizedCheckout-contentSecondary-font": "Google_Poppins_500",
-        "optimizedCheckout-buttonPrimary-font": "Google_Poppins_500",
+        "optimizedCheckout-contentSecondary-font": "Google_Montserrat_500",
+        "optimizedCheckout-buttonPrimary-font": "Google_Montserrat_500",
         "optimizedCheckout-buttonPrimary-color": "#ffffff",
         "optimizedCheckout-buttonPrimary-colorHover": "#ffffff",
         "optimizedCheckout-buttonPrimary-colorActive": "#ffffff",
@@ -650,7 +654,7 @@
         "optimizedCheckout-formChecklist-color": "#333333",
         "optimizedCheckout-formChecklist-borderColor": "#cccccc",
         "optimizedCheckout-formChecklist-backgroundColorSelected": "#f5f5f5",
-        "optimizedCheckout-buttonSecondary-font": "Google_Poppins_500",
+        "optimizedCheckout-buttonSecondary-font": "Google_Montserrat_500",
         "optimizedCheckout-buttonSecondary-color": "#333333",
         "optimizedCheckout-buttonSecondary-colorHover": "#333333",
         "optimizedCheckout-buttonSecondary-colorActive": "#000000",
@@ -661,7 +665,7 @@
         "optimizedCheckout-buttonSecondary-borderColorHover": "#999999",
         "optimizedCheckout-buttonSecondary-borderColorActive": "#757575",
         "optimizedCheckout-link-color": "#476bef",
-        "optimizedCheckout-link-font": "Google_Poppins_500",
+        "optimizedCheckout-link-font": "Google_Montserrat_500",
         "optimizedCheckout-discountBanner-backgroundColor": "#e5e5e5",
         "optimizedCheckout-discountBanner-textColor": "#333333",
         "optimizedCheckout-discountBanner-iconColor": "#333333",
@@ -806,7 +810,7 @@
         "header_right_item4_text": "Live Chat",
         "header_right_item4_link": "#",
         "quickEditCart": true,
-        "beforeQuickSearch": true,
+        "beforeQuickSearch": false,
         "beforeQuickSearch-trending-now": true,
         "beforeQuickSearch-trending-now-title": "Trending Now",
         "beforeQuickSearch-trending-now-1": "Annie's Garden",
