Update Mega Menu Part

--- a/config.json
+++ b/config.json
@@ -763,39 +763,139 @@
         "paymentbuttons-provider-sorting": [],
         "customMegamenu": true,
         "customMegamenuType": "Editor",
-        "mega_menu_styleCustom_bottom":"<span>COVID-19 Delayed Shipping Notice*.</span><a href='#'>More Details</a>",
         "mega_menu_styleCustom_item1": "1",
-        "mega_menu_styleCustom_item1_col": "3",
-        "mega_menu_styleCustom_item1_imgWidth": "40%",
-        "mega_menu_styleCustom_item1_cateWidth": "60%",
-        "mega_menu_styleCustom_img1": "halo-megamenu-1.jpg",
+        "mega_menu_styleCustom_item1_col": "2",
+        "mega_menu_styleCustom_item1_imgWidth": "60%",
+        "mega_menu_styleCustom_item1_cateWidth": "40%",
+        "mega_menu_styleCustom_img1": "megamenu-style1-img-1.jpg",
         "mega_menu_styleCustom_link1": "#",
-        "mega_menu_styleCustom_img2": "halo-megamenu-1.jpg",
+        "mega_menu_styleCustom_img1_title": "Shop All",
+        "mega_menu_styleCustom_img1_desc": "Not too sure where to start? Discover the full Tish Lyon collection, including attachments, labrets, rings and much more.",
+        "mega_menu_styleCustom_img2": "megamenu-style1-img-2.jpg",
         "mega_menu_styleCustom_link2": "#",
+        "mega_menu_styleCustom_img2_title": "Spring/Summer Catalogue",
+        "mega_menu_styleCustom_img2_desc": "Get your free catalogue today.",
+        "mega_menu_styleCustom_item1_imgAspectRatio": "2.0",
+
+
         "mega_menu_styleCustom_item2": "2",
         "mega_menu_styleCustom_item2_col": "3",
-        "mega_menu_styleCustom_item2_imgWidth": "40%",
-        "mega_menu_styleCustom_item2_cateWidth": "60%",
-        "mega_menu_styleCustom_img3": "halo-megamenu-1.jpg",
+        "mega_menu_styleCustom_item2_imgWidth": "75%",
+        "mega_menu_styleCustom_item2_cateWidth": "35%",
+        "mega_menu_styleCustom_img3": "megamenu-style2-img-1.jpg",
         "mega_menu_styleCustom_link3": "#",
-        "mega_menu_styleCustom_img4": "halo-megamenu-1.jpg",
+        "mega_menu_styleCustom_img3_title": "Style Spotlight",
+        "mega_menu_styleCustom_img3_desc": "Shop the ear curation.",
+        "mega_menu_styleCustom_img4": "megamenu-style2-img-2.jpg",
         "mega_menu_styleCustom_link4": "#",
+        "mega_menu_styleCustom_img4_title": "Adorning Rooks",
+        "mega_menu_styleCustom_img4_desc": "Keeping your rook collection on trend.",
+        "mega_menu_styleCustom_img5": "megamenu-style2-img-3.jpg",
+        "mega_menu_styleCustom_link5": "#",
+        "mega_menu_styleCustom_img5_title": "Unite Your Piercings",
+        "mega_menu_styleCustom_img5_desc": "Link piercings with luxury chains.",
+        "mega_menu_styleCustom_item2_imgAspectRatio": "1.1111111111111112",
+
+
         "mega_menu_styleCustom_item3": "3",
         "mega_menu_styleCustom_item3_col": "3",
-        "mega_menu_styleCustom_item3_imgWidth": "40%",
-        "mega_menu_styleCustom_item3_cateWidth": "60%",
-        "mega_menu_styleCustom_img5": "halo-megamenu-1.jpg",
-        "mega_menu_styleCustom_link5": "#",
-        "mega_menu_styleCustom_img6": "halo-megamenu-1.jpg",
+        "mega_menu_styleCustom_item3_imgWidth": "100%",
+        "mega_menu_styleCustom_item3_cateWidth": "0%",
+        "mega_menu_styleCustom_img6": "megamenu-style2-img-4.jpg",
         "mega_menu_styleCustom_link6": "#",
+        "mega_menu_styleCustom_img6_title": "9ct Gold",
+        "mega_menu_styleCustom_img6_desc": "Recommended for retailers.",
+        "mega_menu_styleCustom_img7": "megamenu-style2-img-5.jpg",
+        "mega_menu_styleCustom_link7": "#",
+        "mega_menu_styleCustom_img7_title": "14ct Gold",
+        "mega_menu_styleCustom_img7_desc": "Recommended for piercers.",
+        "mega_menu_styleCustom_img8": "megamenu-style2-img-6.jpg",
+        "mega_menu_styleCustom_link8": "#",
+        "mega_menu_styleCustom_img8_title": "18ct Gold",
+        "mega_menu_styleCustom_img8_desc": "Something extra special.",
+        "mega_menu_styleCustom_item3_imgAspectRatio": "1.4285714285714286",
+
+
         "mega_menu_styleCustom_item4": "4",
         "mega_menu_styleCustom_item4_col": "3",
-        "mega_menu_styleCustom_item4_imgWidth": "40%",
-        "mega_menu_styleCustom_item4_cateWidth": "60%",
-        "mega_menu_styleCustom_img7": "halo-megamenu-1.jpg",
-        "mega_menu_styleCustom_link7": "#",
-        "mega_menu_styleCustom_img8": "halo-megamenu-1.jpg",
-        "mega_menu_styleCustom_link8": "#",
+        "mega_menu_styleCustom_item4_imgWidth": "100%",
+        "mega_menu_styleCustom_item4_cateWidth": "0%",
+        "mega_menu_styleCustom_img9": "megamenu-style2-img-7.jpg",
+        "mega_menu_styleCustom_link9": "#",
+        "mega_menu_styleCustom_img9_title": "Yellow Gold",
+        "mega_menu_styleCustom_img9_desc": "",
+        "mega_menu_styleCustom_img10": "megamenu-style2-img-8.jpg",
+        "mega_menu_styleCustom_link10": "#",
+        "mega_menu_styleCustom_img10_title": "White Gold",
+        "mega_menu_styleCustom_img10_desc": "",
+        "mega_menu_styleCustom_img11": "megamenu-style2-img-9.jpg",
+        "mega_menu_styleCustom_link11": "#",
+        "mega_menu_styleCustom_img11_title": "Rose Gold",
+        "mega_menu_styleCustom_img11_desc": "",
+        "mega_menu_styleCustom_item4_imgAspectRatio": "1.4285714285714286",
+
+        "mega_menu_styleCustom_item5": "5",
+        "mega_menu_styleCustom_item5_col": "3",
+        "mega_menu_styleCustom_item5_imgWidth": "100%",
+        "mega_menu_styleCustom_item5_cateWidth": "0%",
+        "mega_menu_styleCustom_img12": "megamenu-style2-img-10.jpg", 
+        "mega_menu_styleCustom_link12": "#",
+        "mega_menu_styleCustom_img12_title": "Coven",
+        "mega_menu_styleCustom_img12_desc": "",
+        "mega_menu_styleCustom_img13": "megamenu-style2-img-11.jpg",
+        "mega_menu_styleCustom_link13": "#",
+        "mega_menu_styleCustom_img13_title": "Retro",
+        "mega_menu_styleCustom_img13_desc": "",
+        "mega_menu_styleCustom_img14": "megamenu-style2-img-12.jpg",
+        "mega_menu_styleCustom_link14": "#",
+        "mega_menu_styleCustom_img14_title": "Wild West",
+        "mega_menu_styleCustom_img14_desc": "",
+        "mega_menu_styleCustom_img15": "megamenu-style2-img-13.jpg",
+        "mega_menu_styleCustom_link15": "#",
+        "mega_menu_styleCustom_img15_title": "Bloom",
+        "mega_menu_styleCustom_img15_desc": "",
+        "mega_menu_styleCustom_img16": "megamenu-style2-img-14.jpg",
+        "mega_menu_styleCustom_link16": "#",
+        "mega_menu_styleCustom_img16_title": "Cosmic",
+        "mega_menu_styleCustom_img16_desc": "",
+        "mega_menu_styleCustom_item5_imgAspectRatio": "1.0",
+
+        "mega_menu_styleCustom_item6": "9",
+        "mega_menu_styleCustom_item6_col": "3",
+        "mega_menu_styleCustom_item6_imgWidth": "100%",
+        "mega_menu_styleCustom_item6_cateWidth": "0%",
+        "mega_menu_styleCustom_img17": "megamenu-style2-img-15.jpg",
+        "mega_menu_styleCustom_link17": "#",
+        "mega_menu_styleCustom_img17_title": "New Arrivals",
+        "mega_menu_styleCustom_img17_desc": "Always stay on trend with the lastest designs.",
+        "mega_menu_styleCustom_img18": "megamenu-style2-img-16.jpg",
+        "mega_menu_styleCustom_link18": "#",
+        "mega_menu_styleCustom_img18_title": "Best Sellers",
+        "mega_menu_styleCustom_img18_desc": "No brainers for your Tish collection.",
+        "mega_menu_styleCustom_item6_imgAspectRatio": "2.0",
+
+        "mega_menu_styleCustom_item7": "10",
+        "mega_menu_styleCustom_item7_col": "3",
+        "mega_menu_styleCustom_item7_imgWidth": "100%",
+        "mega_menu_styleCustom_item7_cateWidth": "0%",
+        "mega_menu_styleCustom_img19": "megamenu-style2-img-17.jpg",
+        "mega_menu_styleCustom_link19": "#",
+        "mega_menu_styleCustom_img19_title": "About Us",
+        "mega_menu_styleCustom_img19_desc": "",
+        "mega_menu_styleCustom_img20": "megamenu-style2-img-18.jpg",
+        "mega_menu_styleCustom_link20": "#",
+        "mega_menu_styleCustom_img20_title": "Find a Stockist",
+        "mega_menu_styleCustom_img20_desc": "",
+        "mega_menu_styleCustom_img21": "megamenu-style2-img-19.jpg",
+        "mega_menu_styleCustom_link21": "#",
+        "mega_menu_styleCustom_img21_title": "Tish Tips Blog",
+        "mega_menu_styleCustom_img22": "megamenu-style2-img-20.jpg",
+        "mega_menu_styleCustom_link22": "#",
+        "mega_menu_styleCustom_img22_title": "FAQs",
+        "mega_menu_styleCustom_item7_imgAspectRatio": "1.0",
+        
+
+
         "header_top_bg": "#003A63",
         "header_top_text_color": "#ffffff",
         "header_top_text_colorHover": "#ffffff",
