--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Cornerstone 6-14 Custom",
+  "name": "Cornerstone 6-14 Custom Before Add AOS",
   "version": "6.14.0",
   "template_engine": "handlebars_v4",
   "meta": {
@@ -593,7 +593,7 @@
         "alert-color-alt": "#ffffff",
         "storeName-color": "#333333",
         "body-bg": "#ffffff",
-        "header-backgroundColor": "#ffffff",
+        "header-backgroundColor": "#f4f2f0",
         "footer-backgroundColor": "#ffffff",
         "navUser-color": "#333333",
         "navUser-color-hover": "#757575",
@@ -602,7 +602,7 @@
         "navUser-indicator-backgroundColor": "#333333",
         "navPages-color": "#212121",
         "navPages-color-hover": "#757575",
-        "navPages-subMenu-backgroundColor": "#ffffff",
+        "navPages-subMenu-backgroundColor": "#f4f2f0",
         "navPages-subMenu-separatorColor": "#cccccc",
         "dropdown--quickSearch-backgroundColor": "#e5e5e5",
         "dropdown--wishList-backgroundColor": "#ffffff",
