--- a/config.json
+++ b/config.json
@@ -480,6 +480,7 @@
         "default_image_product": "img/ProductDefault.gif",
         "default_image_gift_certificate": "img/GiftCertificate.png",
         "body-font": "Google_Montserrat_400",
+        "body-font-light": "Google_Montserrat_300",
         "headings-font": "Google_Cardo_400",
         "headings-font-2": "Google_Cardo_700",
         "fontSize-root": 16,
@@ -490,7 +491,7 @@
         "fontSize-h5": 15,
         "fontSize-h6": 13,
         "applePay-button": "black",
-        "color-textBase": "#333333",
+        "color-textBase": "#212121",
         "color-textBase--hover": "#757575",
         "color-textBase--active": "#757575",
         "color-textSecondary": "#757575",
@@ -595,7 +596,7 @@
         "body-bg": "#ffffff",
         "header-backgroundColor": "#f4f2f0",
         "footer-backgroundColor": "#ffffff",
-        "navUser-color": "#333333",
+        "navUser-color": "#212121",
         "navUser-color-hover": "#757575",
         "navUser-dropdown-backgroundColor": "#ffffff",
         "navUser-dropdown-borderColor": "#cccccc",
