Done Footer No Settings + Fix Payment

--- a/config.json
+++ b/config.json
@@ -71,14 +71,6 @@
     "show_powered_by": true,
     "shop_by_brand_show_footer": true,
     "show_copyright_footer": true,
-    "show_accept_amex": false,
-    "show_accept_discover": false,
-    "show_accept_mastercard": false,
-    "show_accept_paypal": false,
-    "show_accept_visa": false,
-    "show_accept_amazonpay": false,
-    "show_accept_googlepay": false,
-    "show_accept_klarna": false,
     "show_product_details_tabs": true,
     "show_product_reviews": true,
     "show_quick_payment_buttons": true,
@@ -444,17 +436,9 @@
         "brandpage_products_per_page": 12,
         "searchpage_products_per_page": 12,
         "show_product_quick_view": true,
-        "show_powered_by": true,
-        "shop_by_brand_show_footer": true,
+        "show_powered_by": false,
+        "shop_by_brand_show_footer": false,
         "show_copyright_footer": true,
-        "show_accept_amex": false,
-        "show_accept_discover": false,
-        "show_accept_mastercard": false,
-        "show_accept_paypal": false,
-        "show_accept_visa": false,
-        "show_accept_amazonpay": false,
-        "show_accept_googlepay": false,
-        "show_accept_klarna": false,
         "show_product_details_tabs": true,
         "show_product_reviews": true,
         "show_quick_payment_buttons": true,
@@ -480,7 +464,6 @@
         "default_image_product": "img/ProductDefault.gif",
         "default_image_gift_certificate": "img/GiftCertificate.png",
         "body-font": "Google_Montserrat_400",
-        "body-font-light": "Google_Montserrat_300",
         "headings-font": "Google_Cardo_400",
         "headings-font-2": "Google_Cardo_700",
         "fontSize-root": 16,
@@ -494,13 +477,13 @@
         "color-textBase": "#212121",
         "color-textBase--hover": "#757575",
         "color-textBase--active": "#757575",
-        "color-textSecondary": "#757575",
-        "color-textSecondary--hover": "#333333",
-        "color-textSecondary--active": "#333333",
+        "color-textSecondary": "#cba052",
+        "color-textSecondary--hover": "#cba052",
+        "color-textSecondary--active": "#cba052",
         "color-textLink": "#333333",
         "color-textLink--hover": "#757575",
         "color-textLink--active": "#757575",
-        "color-textHeading": "#444444",
+        "color-textHeading": "#212121",
         "color-primary": "#757575",
         "color-primaryDark": "#666666",
         "color-primaryDarker": "#333333",
@@ -595,7 +578,7 @@
         "storeName-color": "#333333",
         "body-bg": "#ffffff",
         "header-backgroundColor": "#f4f2f0",
-        "footer-backgroundColor": "#ffffff",
+        "footer-backgroundColor": "#f4f2f0",
         "navUser-color": "#212121",
         "navUser-color-hover": "#757575",
         "navUser-dropdown-backgroundColor": "#ffffff",
@@ -762,6 +745,7 @@
         "amazon-button-color": "Gold",
         "masterpass-button-color": "black",
         "paymentbuttons-provider-sorting": [],
+        "thin-body-font": "Google_Montserrat_300",
         "customMegamenu": true,
         "customMegamenuType": "Editor",
         "mega_menu_styleCustom_item1": "1",
@@ -925,7 +909,46 @@
         "beforeQuickSearch-popular-title": "Most Popular",
         "beforeQuickSearch-popular-id": "2407,2408,2409",
         "beforeQuickSearch-limit": "3",
-        "enable_header_layout_2": true
+        "enable_header_layout_2": true,
+
+        "footer_logo": "footer-logo.png",        
+        "footer_col1_heading": "Explore",
+        "footer_col1_item1_text": "Edit Cart",
+        "footer_col1_item1_link": "/cart.php",
+        "footer_col1_item2_text": "Home",
+        "footer_col1_item2_link": "/",
+        "footer_col1_item3_text": "Search",
+        "footer_col1_item3_link": "/search.php",
+        "footer_col1_item4_text": "About Us",
+        "footer_col1_item4_link": "/about-us/",
+        "footer_col1_item5_text": "Contact Us",
+        "footer_col1_item5_link": "/contact-us/",
+        "footer_col1_item6_text": "Shipping Information",
+        "footer_col1_item6_link": "/shipping-information/",
+
+        "footer_col2_heading": "Policies",
+        "footer_col2_item1_text": "Account Application Guidelines",
+        "footer_col2_item1_link": "https://cdn.shopify.com/s/files/1/0741/2629/5360/files/TL_ApplicationGuidelines.pdf",
+        "footer_col2_item2_text": "Privacy Policy",
+        "footer_col2_item2_link": "/privacy-policy/",
+        "footer_col2_item3_text": "Returns & Refunds",
+        "footer_col2_item3_link": "/returns-refunds/",
+        "footer_col2_item4_text": "Terms & Conditions",
+        "footer_col2_item4_link": "/terms-conditions/",
+
+        "footer_col3_heading": "Downloads",
+        "footer_col3_item1_text": "Tish Brand Hub",
+        "footer_col3_item1_link": "/brand-hub",
+        "footer_col3_item2_text": "Product Catalogue 4th Edition",
+        "footer_col3_item2_link": "https://heyzine.com/flip-book/5e2bcbe8f6.html",
+        "footer_col3_item3_text": "CMJ Order Form",
+        "footer_col3_item3_link": "https://cdn.shopify.com/s/files/1/0741/2629/5360/files/Order_Form.pdf",
+
+        "footer_col4_heading": "Stay in Touch",
+        "footer_col4_desc": "Keep up to date with all the latest Tish Lyon news via our socials.",
+        "footer_col4_item1_link": "https://www.instagram.com/tish_lyon/",
+        "footer_col4_item2_link": "https://www.facebook.com/TishLyonJewellery/",
+        "footer_col4_item3_link": "https://www.tiktok.com/@tish_lyon_gold"
       }
     }
   ]
