Done Home Carousel

--- a/config.json
+++ b/config.json
@@ -517,9 +517,9 @@
         "button--default-color2": "#cba052",
         "button--default-colorHover2": "#cba052",
         "button--default-colorActive2": "#cba052",
-        "button--default-borderColor": "#8F8F8F",
-        "button--default-borderColorHover": "#474747",
-        "button--default-borderColorActive": "#757575",
+        "button--default-borderColor": "transparent",
+        "button--default-borderColorHover": "transparent",
+        "button--default-borderColorActive": "transparent",
         "button--primary-color": "#ffffff",
         "button--primary-colorHover": "#ffffff",
         "button--primary-colorActive": "#ffffff",
@@ -540,9 +540,9 @@
         "button--icon-svg-color": "#757575",
         "icon-ratingEmpty": "#8F8F8F",
         "icon-ratingFull": "#474747",
-        "carousel-bgColor": "#ffffff",
-        "carousel-title-color": "#444444",
-        "carousel-description-color": "#333333",
+        "carousel-bgColor": "transparent",
+        "carousel-title-color": "#fffffff",
+        "carousel-description-color": "#ffffff",
         "carousel-dot-color": "#333333",
         "carousel-dot-color-active": "#757575",
         "carousel-dot-bgColor": "#ffffff",
