Done Locator Form Layout Not Function

--- a/config.json
+++ b/config.json
@@ -463,7 +463,7 @@
         "default_image_brand": "img/BrandDefault.gif",
         "default_image_product": "img/ProductDefault.gif",
         "default_image_gift_certificate": "img/GiftCertificate.png",
-        "body-font": "Google_Montserrat_400",
+        "body-font": "Google_Montserrat_300",
         "headings-font": "Google_Cardo_400",
         "headings-font-2": "Google_Cardo_700",
         "fontSize-root": 16,
@@ -745,7 +745,7 @@
         "amazon-button-color": "Gold",
         "masterpass-button-color": "black",
         "paymentbuttons-provider-sorting": [],
-        "thin-body-font": "Google_Montserrat_300",
+        "bold-body-font": "Google_Montserrat_400",
         "customMegamenu": true,
         "customMegamenuType": "Editor",
         "mega_menu_styleCustom_item1": "1",
