Start custom category page

--- a/config.json
+++ b/config.json
@@ -524,8 +524,8 @@
         "button--primary-colorHover": "#ffffff",
         "button--primary-colorActive": "#ffffff",
         "button--primary-backgroundColor": "#cba052",
-        "button--primary-backgroundColorHover": "#cba052",
-        "button--primary-backgroundColorActive": "#cba052",
+        "button--primary-backgroundColorHover": "#c5953e",
+        "button--primary-backgroundColorActive": "#c5953e",
         "button--secondary-color": "#cba052",
         "button--secondary-colorHover": "#cba052",
         "button--secondary-colorActive": "#cba052",
