Custom Category Page Part 1

--- a/config.json
+++ b/config.json
@@ -413,7 +413,7 @@
       "settings": {
         "hide_breadcrumbs": false,
         "hide_page_heading": false,
-        "hide_category_page_heading": false,
+        "hide_category_page_heading": true,
         "hide_blog_page_heading": false,
         "hide_contact_us_page_heading": false,
         "homepage_new_products_count": 5,
