--- a/config.json
+++ b/config.json
@@ -1017,7 +1017,8 @@
         "home_fullwidth_banner_title": "The finishing touch.",
         "home_fullwidth_banner_text": "Luxury displays for luxury jewellery.",
         "home_fullwidth_banner_button": "View products",
-        "home_fullwidth_banner_link": "#"
+        "home_fullwidth_banner_link": "#",
+        "customAddOptionForProduct":  true
       }
     }
   ]
