Done Category No Test

--- a/config.json
+++ b/config.json
@@ -554,8 +554,8 @@
         "carousel-play-pause-button-textColor--hover": "#474747",
         "carousel-play-pause-button-bgColor": "#ffffff",
         "carousel-play-pause-button-borderColor": "#ffffff",
-        "card-title-color": "#333333",
-        "card-title-color-hover": "#757575",
+        "card-title-color": "#000000",
+        "card-title-color-hover": "#212121",
         "card-figcaption-button-background": "#ffffff",
         "card-figcaption-button-color": "#333333",
         "card--alternate-backgroundColor": "#ffffff",
@@ -684,7 +684,7 @@
         "social_icon_placement_top": false,
         "social_icon_placement_bottom": "bottom_none",
         "navigation_design": "alternate",
-        "price_ranges": true,
+        "price_ranges": false,
         "pdp-price-label": "",
         "pdp_sale_badge_label": "",
         "pdp_sold_out_label": "",
