Done Sidebar layout noCcalculate Free Shipping

--- a/config.json
+++ b/config.json
@@ -530,8 +530,10 @@
         "button--secondary-colorHover": "#cba052",
         "button--secondary-colorActive": "#cba052",
         "button--secondary-backgroundColor": "transparent",
-        "button--secondary-backgroundColorHover": "transparent",
-        "button--secondary-backgroundColorActive": "transparent",
+        "button--secondary-backgroundColorHover": "#cba052",
+        "button--secondary-backgroundColorActive": "#cba052",
+        "button--secondary-borderColor": "#cba052",
+        "button--secondary-borderColorHover": "#cba052",
         "button--disabled-color": "#ffffff",
         "button--disabled-backgroundColor": "#cccccc",
         "button--disabled-borderColor": "transparent",
