--- a/config.json
+++ b/config.json
@@ -216,7 +216,7 @@
     "navPages-subMenu-backgroundColor": "#e5e5e5",
     "navPages-subMenu-separatorColor": "#cccccc",
     "dropdown--quickSearch-backgroundColor": "#e5e5e5",
-    "dropdown--wishList-backgroundColor": "#ffffff",
+    "dropdown--wishList-backgroundColor": "#cba052",
     "blockquote-cite-font-color": "#999999",
     "container-border-global-color-base": "#e5e5e5",
     "container-fill-base": "#ffffff",
@@ -442,7 +442,7 @@
         "show_product_details_tabs": true,
         "show_product_reviews": true,
         "show_quick_payment_buttons": true,
-        "show_custom_fields_tabs": false,
+        "show_custom_fields_tabs": true,
         "show_product_weight": true,
         "show_product_dimensions": false,
         "show_product_swatch_names": true,
@@ -454,8 +454,8 @@
         "brand_size": "190x250",
         "gallery_size": "300x300",
         "productgallery_size": "640x640",
-        "product_size": "500x659",
-        "productview_thumb_size": "50x50",
+        "product_size": "577x577",
+        "productview_thumb_size": "75x75",
         "productthumb_size": "100x100",
         "thumb_size": "100x100",
         "zoom_size": "1280x1280",
@@ -565,13 +565,13 @@
         "card--alternate-color--hover": "#ffffff",
         "form-label-font-color": "#666666",
         "input-font-color": "#666666",
-        "input-border-color": "#8F8F8F",
-        "input-border-color-active": "#474747",
+        "input-border-color": "#f4f2f0",
+        "input-border-color-active": "#cba052",
         "input-bg-color": "#ffffff",
         "input-disabled-bg": "#ffffff",
         "select-bg-color": "#ffffff",
         "select-arrow-color": "#757575",
-        "checkRadio-color": "#333333",
+        "checkRadio-color": "#DBAF59",
         "checkRadio-backgroundColor": "#ffffff",
         "checkRadio-borderColor": "#8f8f8f",
         "alert-backgroundColor": "#ffffff",
@@ -591,7 +591,7 @@
         "navPages-subMenu-backgroundColor": "#f4f2f0",
         "navPages-subMenu-separatorColor": "#cccccc",
         "dropdown--quickSearch-backgroundColor": "#e5e5e5",
-        "dropdown--wishList-backgroundColor": "#ffffff",
+        "dropdown--wishList-backgroundColor": "#cba052",
         "blockquote-cite-font-color": "#999999",
         "container-border-global-color-base": "#e5e5e5",
         "container-fill-base": "#ffffff",
@@ -682,7 +682,7 @@
         "color_hover_product_sold_out_badges": "#000000",
         "focusTooltip-textColor": "#ffffff",
         "focusTooltip-backgroundColor": "#313440",
-        "swatch_option_size": "22x22",
+        "swatch_option_size": "32x32",
         "social_icon_placement_top": false,
         "social_icon_placement_bottom": "bottom_none",
         "navigation_design": "alternate",
